--- a/Frontend/my-project/package.json
+++ b/Frontend/my-project/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.3",
     "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.3.0",
+    "@stripe/stripe-js": "^7.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0"
+    "react-razorpay": "^3.0.1",
+    "react-router-dom": "^7.2.0",
+    "sonner": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
