--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js",
+    "start": "node Backend/server.js",
+    "dev": "nodemon Backend/server.js",
     "seed": "node seeder.js"
   },
   "keywords": [],
